# libsoxr-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  regenerate_bindings.sh
src/: generated.rs  lib.rs
